--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nvm": "10.9.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "express": "^5.1.0",
     "module-alias": "^2.2.3"
   },
@@ -30,6 +31,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.17",
     "nodemon": "^3.1.10",
+    "prisma": "^6.7.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   },
