--- a/.env.exemple
+++ b/.env.exemple
@@ -1,2 +1,5 @@
 ## PostgreSQL Database Configuration
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+## MD5 Hash for the default user
+DEFAULT_USER_HASH="MD5_HASH_FOR_DEFAULT_USER"
