--- a/.env.exemple
+++ b/.env.exemple
@@ -1,3 +1,5 @@
+PORT=8080
+
 ## PostgreSQL Database Configuration
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
