--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.7",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.17",
