--- a/.env.exemple
+++ b/.env.exemple
@@ -1,7 +1,10 @@
 PORT=8080
 
 ## PostgreSQL Database Configuration
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgres://admin:admin123@database:5432/w3_connect_db"
+
+##  RabbitMQ Configuration
+RABBITMQ_URL="amqp://admin:admin123@rabbitmq:5672/"
 
 ## MD5 Hash for the default user
-DEFAULT_USER_HASH="MD5_HASH_FOR_DEFAULT_USER"
+DEFAULT_USER_HASH="7fc4edf65ca3b95ab3a1e71c28c7afd3"
