--- a/docs/Insomnia_2025-05-10.yaml
+++ b/docs/Insomnia_2025-05-10.yaml
@@ -1,5 +1,5 @@
 type: collection.insomnia.rest/5.0
-name: w2-connect-api
+name: wconnect-api
 meta:
   id: wrk_c0ed73918e81415e87e1255364c000f3
   created: 1746902452073
@@ -100,7 +100,7 @@ collection:
             value: insomnia/11.0.2
         authentication:
           type: bearer
-          token: "{{ _.token }}"
+          token: '{{ _.token }}'
         settings:
           renderRequestBody: true
           encodeUrl: true
@@ -123,7 +123,7 @@ collection:
             value: insomnia/11.0.2
         authentication:
           type: bearer
-          token: "{{ _.token }}"
+          token: '{{ _.token }}'
         settings:
           renderRequestBody: true
           encodeUrl: true
@@ -144,11 +144,11 @@ collection:
         parameters:
           - id: pair_e811b85e6e394ca48194a877d18099af
             name: limit
-            value: "10"
+            value: '10'
             disabled: false
           - id: pair_b1260b3eadad427ab5e5fbe20a10d077
             name: page
-            value: "1"
+            value: '1'
             disabled: false
           - id: pair_0d67311a8c4c4842bf1196519038ab97
             name: filters
@@ -164,7 +164,7 @@ collection:
             value: insomnia/11.0.2
         authentication:
           type: bearer
-          token: "{{ _.token }}"
+          token: '{{ _.token }}'
         settings:
           renderRequestBody: true
           encodeUrl: true
@@ -197,7 +197,7 @@ collection:
             value: insomnia/11.0.2
         authentication:
           type: bearer
-          token: "{{ _.token }}"
+          token: '{{ _.token }}'
           disabled: false
         settings:
           renderRequestBody: true
@@ -228,7 +228,7 @@ collection:
             value: insomnia/11.0.2
         authentication:
           type: bearer
-          token: "{{ _.token }}"
+          token: '{{ _.token }}'
         settings:
           renderRequestBody: true
           encodeUrl: true
@@ -259,7 +259,7 @@ collection:
             value: insomnia/11.0.2
         authentication:
           type: bearer
-          token: "{{ _.token }}"
+          token: '{{ _.token }}'
         settings:
           renderRequestBody: true
           encodeUrl: true
@@ -295,7 +295,7 @@ collection:
             value: insomnia/11.0.2
         authentication:
           type: bearer
-          token: "{{ _.token }}"
+          token: '{{ _.token }}'
         settings:
           renderRequestBody: true
           encodeUrl: true
