--- a/.env.exemple
+++ b/.env.exemple
@@ -1,7 +1,7 @@
 PORT=8080
 
 ## PostgreSQL Database Configuration
-DATABASE_URL="postgres://admin:admin123@database:5432/w3_connect_db"
+DATABASE_URL="postgresql://admin:admin123@database:5432/w3_connect_db"
 
 ##  RabbitMQ Configuration
 RABBITMQ_URL="amqp://admin:admin123@rabbitmq:5672/"
