--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
