--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,8 @@
 PORT=8080
 
+## Observability Configuration
+PINO_LOG_LEVEL="trace"
+
 ## PostgreSQL Database Configuration
 DATABASE_URL="postgresql://admin:admin123@database:5432/wconnect_db"
 
