--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prisma:migration": "prisma migrate dev",
     "build": "rimraf ./dist && tsc -p tsconfig-build.json",
     "dev": "nodemon",
-    "start": "node dist/main/server.js"
+    "start": "node dist/main/server.js | npx pino-pretty"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.17",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.0.0",
     "prisma": "^6.7.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
